# cosmic-ext-applet-sysmon

./: Cargo.toml  README.md  justfile
docs/superpowers/plans/: 2026-06-16-colored-metrics-plan.md
docs/superpowers/specs/: 2026-06-16-colored-metrics-design.md
i18n/en/: cosmic_ext_applet_sysmon.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  color.rs  config.rs  format.rs  main.rs
src/sensors/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs
